# qemu-sgi-project

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  build_desktop_eoe_tar.py  catch_badmagic.py  clock_fix_test.py  docker-compose.yml  one_shot_probe.py  probe_segfaults.py  probe_segfaults_v2.py  run_boot_desktop.py  run_build_ip54_on_indy_gold.py  run_complete_install.py  run_ip54_desktop.sh  run_ip54_gdb.sh  run_ip54_simple.sh  run_ip54_xdm_fix.py  run_m1_kernel_rebuild.py  run_post_install_verify.py  run_v2_addon_only.py  run_v2_fill_remaining.py  run_v2_install.py  scan_inode_buffers.py  v3_probe.py
pyirix_qemu/: README.md  __init__.py  boot_harness.py  build_minimal_root.py  deadcode.py  disk_manager.py  guest_gdb.py  gwagent.c  gwagent.n32  host_channel.py  irix_telnet.py  pyproject.toml  requirements.txt  session_lib.py
pyirix_qemu/catalog/: __init__.py  images.py  library.py
pyirix_qemu/desktop/: README.md  __init__.py  describe.py  gwxq.c  gwxq.n32  introspect.py  parse_x.py  targeting.py
pyirix_qemu/desktop/test_fixtures/: desktop_xprop_batch.txt  (+5 more)
pyirix_qemu/install/: __init__.py  irix.py
pyirix_qemu/install_v2/: README.md  __init__.py  context.py  inst_safety.py  inst_session.py  orchestrator.py
sgi_mcp/: README.md  __init__.py  analysis.py  boot_milestones.py  comparator.py  config.py  disassembler.py  export.py  formatters.py  ghidra_bridge.py  hardware_defs.py  nvram_utils.py  pattern_detector.py  prom_loader.py  pyproject.toml  requirements.txt  scsi_parser.py  server.py  sgi_fs.py  vm_instances.py  xxd.py
sgi_mcp/ghidra_scripts/: sgi_analyze.py  sgi_decompile.py  sgi_disassemble.py  sgi_import_symbols.py  sgi_list_functions.py  sgi_xrefs.py
(+373 files in other folders)
