[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgi-prom-mcp"
version = "0.1.0"
description = "MCP server for SGI PROM comparative analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "SGI PROM Analysis Tools"}
]
keywords = ["sgi", "prom", "mips", "mcp", "reverse-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Disassemblers",
]

dependencies = [
    "capstone>=5.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
sgi-prom-mcp = "sgi_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sgi_mcp*"]
